Fixed sponsor logos on mobile and changed bg color. Still need to fix MLH banner on mobile.

--- a/src/app/sponsor/sponsor.component.css
+++ b/src/app/sponsor/sponsor.component.css
@@ -9,8 +9,14 @@ li {
   list-style-type: none;
   margin: 30px;
 }
+
+.logo {
+  width: 100%;
+  max-width: 500px;
+}
+
 #sponsors{
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0.504);;
   width: 100%;
   height: 100%;
   padding-top: 20px;
